# fishtank-TUI

./: .gitignore  Cargo.toml  GITHUB_READY.md  LICENSE  QUICKSTART.md  README.md  SETUP.md  UPDATE_NOTES.md  install.sh  test.sh
src/: main.rs
src/app/: mod.rs
src/models/: decoration.rs  fish.rs  mod.rs
src/persistence/: mod.rs  save.rs
src/ui/: mod.rs  theme.rs
src/utils/: ascii_art.rs  mod.rs
